--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 			href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		Hello World
+		<div class="container"></div>
 	</body>
 </html>
